# alerta-ya

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cloudbuild.yaml  deploy-all-cloudshell.sh  deploy-all.sh  deploy-vm.sh  docker-compose.prod.yml  docker-compose.yml  firebase.storage.rules  service.yaml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci-api.yml  ci-ml.yml  ci-mobile.yml
api/: .env.example  Dockerfile  deploy-cloudshell.sh  package.json  service.yaml  tsconfig.json  vitest.config.ts
api/data/: seed-incidents.json
api/prisma/: schema.prisma  seed.ts
api/scripts/: build-risk-artifact.ts  build-seed-incidents.ts  emit-test-incident.ts  seed-incidents.ts  set-role.ts  setup-test-users.ts
docs/: AlertaZona_Analisis_v1.4.md  DEMO.md  DEPLOYMENT.md  HU_SPRINTS.md  TEAM.md
ml/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  service.yaml
ml/notebooks/: 01_verifier_training.ipynb  02_predictor_training.ipynb  03_spatial_risk.ipynb  train_verifier_v2.py  train_verifier_v3.py
ml/scripts/: drift_monitor.py  extract_datacrim.py  train_predictor.py
ml/src/: main.py
ml/src/core/: config.py  database.py
ml/src/features/monitoring/: drift.py
ml/src/features/prediction/domain/: risk_predictor.py
ml/src/features/prediction/presentation/: router.py
ml/src/features/verification/domain/: report_verifier.py
ml/src/features/verification/infrastructure/: verifier_predictor.py
ml/src/features/verification/presentation/: router.py
ml/src/models/: predictor_v1.joblib
ml/src/tests/: test_drift.py  test_predictor.py  test_verifier.py  test_verifier_predictor.py  test_verifier_router.py
mobile/: .env.example  .gitignore  PLAN.md  README.md  analysis_options.yaml  build.yaml  firebase.json  pubspec.yaml
web/: .env.example  Dockerfile  deploy-cloudshell.sh  index.html  package.json  service.yaml  tailwind.config.ts  vite.config.ts
(+477 files in other folders)
