[project]
name = "alertaya-ml"
version = "0.1.0"
description = "AlertaYa — Microservicio de ML: verificación de reportes y predicción de zonas de riesgo"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # ML
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "xgboost>=2.0.3",
    "prophet>=1.1.5",
    "joblib>=1.4.0",
    # Base de datos
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.30",
    # Config y validación
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths    = ["src/tests"]
asyncio_mode = "auto"

[tool.uv]
package = false
